--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/fernandodev89/DBConexion#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.13.0"
